Estruturacao semantica da landing page

--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
     <title>Lorem Ipsum Sit Amet</title>
 </head>
 <body>
-    <header class="flex-container">
+    <!-- Header -->
+    <header class="flex-container-header">
         <img src="./assets/Grupo 105.png" alt="Lorem Ipsun logo">
         <!-- Barra de Navegação -->
         <nav class="nav-container">
@@ -21,13 +22,16 @@
         
         <button>Lorem Ipsum</button>
     </header>
+    <!-- Conteudo Main -->
     <main class="main">
         <!-- Landing page-->
-        <img id="primeiraImagem" src="./assets/ballpen-blur-close-up-461077.png" alt="Foto mulher usando notebook na mesa">
-        <h1>Lorem Ipsum</h1>
-        <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit</h3>
-        <button>Lorem ipsum</button>
-        <img src="./assets/Grupo 105.png" alt="Logotipo pagina inicial">
+        <div class="landingPage">
+            <img id="primeiraImagem" src="./assets/ballpen-blur-close-up-461077.png" alt="Foto mulher usando notebook na mesa">
+            <h1>Lorem Ipsum</h1>
+            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit</h3>
+            <button>Lorem ipsum</button>
+            <img src="./assets/Grupo 105.png" alt="Logotipo pagina inicial">
+        </div>
 
         <!-- Primeiro texto pós landing page -->
         <p><span style="color: #db641a;">Lorem ipsum</span> dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
@@ -203,6 +207,7 @@
         <!-- #endregion Formulário -->
 
     </main>
+    <!-- Footer -->
     <footer>
         <div style="margin: 10px;">
             <img src="./assets/Grupo 132.png" alt="Logo">
