Estruturei a landing page, posicionei os elementos e coloquei efeito no botão

--- a/main.html
+++ b/main.html
@@ -27,10 +27,13 @@
         <!-- Landing page-->
         <div class="landingPage">
             <img id="primeiraImagem" src="./assets/ballpen-blur-close-up-461077.png" alt="Foto mulher usando notebook na mesa">
-            <h1>Lorem Ipsum</h1>
-            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit</h3>
-            <button>Lorem ipsum</button>
-            <img src="./assets/Grupo 105.png" alt="Logotipo pagina inicial">
+            <div id="vinheta"></div>
+            <div class="landingPage-Elementos">
+                <h1>Lorem Ipsum</h1>
+                <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit</h3>
+                <button>Lorem ipsum</button>
+                <img src="./assets/Grupo 105.png" alt="Logotipo pagina inicial">
+            </div>
         </div>
 
         <!-- Primeiro texto pós landing page -->
