Finalizei a landing page, organizando os elementos nos lugares, arrumando os espaços e inserindo uma grid

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Header -->
     <header class="flex-container-header">
-        <img src="./assets/Grupo 105.png" alt="Lorem Ipsun logo">
+        <img src="./imagens/Grupo 105.png" alt="Lorem Ipsun logo">
         <!-- Barra de Navegação -->
         <nav class="nav-container">
             <ul>
@@ -26,13 +26,19 @@
     <main class="main">
         <!-- Landing page-->
         <div class="landingPage">
-            <img id="primeiraImagem" src="./assets/ballpen-blur-close-up-461077.png" alt="Foto mulher usando notebook na mesa">
+            <img id="primeiraImagem" src="./imagens/ballpen-blur-close-up-461077.png" alt="Foto mulher usando notebook na mesa">
             <div id="vinheta"></div>
             <div class="landingPage-Elementos">
                 <h1>Lorem Ipsum</h1>
                 <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit</h3>
                 <button>Lorem ipsum</button>
-                <img src="./assets/Grupo 105.png" alt="Logotipo pagina inicial">
+                
+            </div>
+            <div id="landingPage-Logomarca">
+                <img src="./imagens/Grupo 105.png" alt="Logotipo pagina inicial">
+            </div>
+            <div id="landingPage-Flecha">
+                <img src="./imagens/arrow.svg" alt="Fecha indicando scroll para baixo">
             </div>
         </div>
 
@@ -52,60 +58,60 @@
             <table style="width:100%; color: white; border-spacing: 40px 20px;">
                 <tr>
                     <td style="background-color: #0072c6; height: 50px;">
-                            <img src="./assets/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
                             <h4>Lorem Ipsum</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </td>
                     <td style="background-color: #2c5898; height: 50px;">
-                            <img src="./assets/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
                             <h4>Lorem Ipsum</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </td>
                 </tr>
                 <tr>
                     <td style="background-color: #207245; height: 50px;">
-                            <img src="./assets/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
                             <h4>Lorem Ipsum</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </td>
                     <td style="background-color: #cb4a32; height: 50px;">
-                            <img src="./assets/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
                             <h4>Lorem Ipsum</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </td>
                 </tr>
                 <tr>
                     <td style="background-color: #733781; height: 50px;">
-                            <img src="./assets/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
                             <h4>Lorem Ipsum</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </td>
                     <td style="background-color: #00aff0; height: 50px;">
-                            <img src="./assets/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
                             <h4>Lorem Ipsum</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </td>
                 </tr>
                 <tr>
                     <td style="background-color: #094ab2; height: 50px;">
-                            <img src="./assets/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
                             <h4>Lorem Ipsum</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </td>
                     <td style="background-color: #0073c6; height: 50px;">
-                            <img src="./assets/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
                             <h4>Lorem Ipsum</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </td>
                 </tr>
                 <tr>
                     <td style="background-color: #0093be; height: 50px;">
-                            <img src="./assets/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
                             <h4>Lorem Ipsum</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </td>
                     <td style="background-color: #5558af; height: 50px;">
-                            <img src="./assets/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
                             <h4>Lorem Ipsum</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </td>
@@ -119,7 +125,7 @@
         <h2><span style="color: steelblue;">Lorem ipsum</span></h2>
         <div>
             <section>
-                <img src="./assets/support.png" alt="Foto mãos comprimentando" style="background-color: #7fba00;">
+                <img src="./imagens/support.png" alt="Foto mãos comprimentando" style="background-color: #7fba00;">
                 <h3 style="color: #7fba00;">Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -128,7 +134,7 @@
                 <button style="color: #7fba00;">Lorem ipsum</button>
             </section>
             <section>
-                <img src="./assets/shield.png" alt="Foto escudo" style="background-color: #00a4ef;">
+                <img src="./imagens/shield.png" alt="Foto escudo" style="background-color: #00a4ef;">
                 <h3 style="color: #00a4ef;">Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -137,7 +143,7 @@
                 <button style="color: #00a4ef;">Lorem ipsum</button>
             </section>
             <section>
-                <img src="./assets/notebook-and-mouse-cursor.png" alt="Foto notebook" style="background-color: #ffb900;">
+                <img src="./imagens/notebook-and-mouse-cursor.png" alt="Foto notebook" style="background-color: #ffb900;">
                 <h3 style="color: #ffb900;">Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -185,7 +191,7 @@
 
         <!-- Seção Foto High Five-->
         <section>
-            <img src="./assets/achievement-adult-agreement-1391373.png" alt="Foto pessoas comemorando">
+            <img src="./imagens/achievement-adult-agreement-1391373.png" alt="Foto pessoas comemorando">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
         </section>
 
@@ -213,11 +219,11 @@
     <!-- Footer -->
     <footer>
         <div style="margin: 10px;">
-            <img src="./assets/Grupo 132.png" alt="Logo">
-            <img src="./assets/Grupo 124.png" alt="Logomarca" style="margin-right: 50px;">
+            <img src="./imagens/Grupo 132.png" alt="Logo">
+            <img src="./imagens/Grupo 124.png" alt="Logomarca" style="margin-right: 50px;">
 
-            <img src="./assets/Grupo 132.png" alt="Logo">
-            <img src="./assets/Grupo 124.png" alt="Logomarca">
+            <img src="./imagens/Grupo 132.png" alt="Logo">
+            <img src="./imagens/Grupo 124.png" alt="Logomarca">
         </div>
         <p>&copy Copyright Ingram Micro Brasil 2018</p>
     </footer>
