--- a/main.html
+++ b/main.html
@@ -66,68 +66,123 @@
         <!-- Tabela com cards coloridos -->
         <!-- #region Tabela -->
         <div class="cardsColoridos">
-            <table>
-                <tr>
-                    <td style="background-color: #0072c6; height: 50px;">
-                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                    </td>
-                    <td style="background-color: #2c5898; height: 50px;">
-                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="background-color: #207245; height: 50px;">
-                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                    </td>
-                    <td style="background-color: #cb4a32; height: 50px;">
-                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="background-color: #733781; height: 50px;">
-                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                    </td>
-                    <td style="background-color: #00aff0; height: 50px;">
-                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="background-color: #094ab2; height: 50px;">
-                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                    </td>
-                    <td style="background-color: #0073c6; height: 50px;">
-                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="background-color: #0093be; height: 50px;">
-                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                    </td>
-                    <td style="background-color: #5558af; height: 50px;">
-                            <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                    </td>
-                </tr>
-            </table>
+
+            <div>
+                <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                <div>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt 
+                        ut labore et dolore magna
+                    </p>
+                </div>
+            </div>
+            
+            <div>
+                <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                <div>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt 
+                        ut labore et dolore magna
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                <div>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt 
+                        ut labore et dolore magna
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                <div>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt 
+                        ut labore et dolore magna
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                <div>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt 
+                        ut labore et dolore magna
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                <div>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt 
+                        ut labore et dolore magna
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                <div>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt 
+                        ut labore et dolore magna
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                <div>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt 
+                        ut labore et dolore magna
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                <div>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit, 
+                        sed do eiusmod tempor incididunt 
+                        ut labore et dolore magna
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./imagens/Grupo de máscara 1.png" alt="Foto flecha no alvo">
+                <div>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                </div>
+            </div>
+
         </div>
         <!-- #endregion Tabela -->
 
