Estruturei os cards com os icones coloridos, estruturei a tabela flex com bordas, alinhei a segunda imagem de fundo com vinheta

--- a/main.html
+++ b/main.html
@@ -47,6 +47,7 @@
         </div>
 
         <!-- Primeiro texto pós landing page -->
+        <!-- #region Textos -->
         <div id="containerTexto1">
             <p><span id="palavraLaranja">Lorem ipsum</span> dolor sit amet, 
                 consectetur adipisicing elit, sed do eiusmod tempor incididunt 
@@ -59,9 +60,10 @@
         </div>
         <!-- Segundo texto pós landing page -->
         <div id="containerTexto2">
-            <h2>Lorem Ipsum</h2>
+            <h2 class="titulo-Azul">Lorem Ipsum</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do elusmod tempor</p>
         </div>
+        <!-- #endregion Textos-->
 
         <!-- Tabela com cards coloridos -->
         <!-- #region Tabela -->
@@ -186,78 +188,106 @@
         </div>
         <!-- #endregion Tabela -->
 
-        <!-- Slider com cards -->
-        <!-- #region Cards -->
-        <h2><span style="color: steelblue;">Lorem ipsum</span></h2>
-        <div>
+        <!-- Slider com cartões -->
+        <!-- #region Cartões -->
+
+        <!-- Titulo Azul -->
+        <h2 class="titulo-Azul">Lorem ipsum</h2>
+
+        <div class="containerCartoes">
             <section>
-                <img src="./imagens/support.png" alt="Foto mãos comprimentando" style="background-color: #7fba00;">
+                <div class="icone">
+                    <img src="./imagens/support.png" alt="Foto mãos comprimentando">
+                </div>
+
                 <h3 style="color: #7fba00;">Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Quis ipsum suspendisse ultrices gravida.
                 </p>
-                <button style="color: #7fba00;">Lorem ipsum</button>
+
+                <div>
+                    <button>Lorem ipsum</button>
+                </div>
             </section>
+
             <section>
-                <img src="./imagens/shield.png" alt="Foto escudo" style="background-color: #00a4ef;">
+                <div class="icone">
+                    <img src="./imagens/shield.png" alt="Foto escudo">
+                </div>
+
                 <h3 style="color: #00a4ef;">Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Quis ipsum suspendisse ultrices gravida.
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Quis ipsum suspendisse ultrices gravida.
                 </p>
-                <button style="color: #00a4ef;">Lorem ipsum</button>
+
+                <div>
+                    <button>Lorem ipsum</button>
+                </div>
             </section>
+
             <section>
-                <img src="./imagens/notebook-and-mouse-cursor.png" alt="Foto notebook" style="background-color: #ffb900;">
+                <div class="icone">
+                    <img src="./imagens/notebook-and-mouse-cursor.png" alt="Foto notebook">
+                </div>
+
                 <h3 style="color: #ffb900;">Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Quis ipsum suspendisse ultrices gravida.
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Quis ipsum suspendisse ultrices gravida.
                 </p>
-                <button style="color: #ffb900;">Lorem ipsum</button>
+
+                <div>
+                    <button>Lorem ipsum</button>
+                </div>
             </section>
         </div>
         <!-- #endregion Cards -->
 
         <!-- Tabela com bordas -->
         <!-- #region Tabela Bordas -->
-        <h2><span style="color: steelblue;">Lorem Ipsum dolor</span></h2>
-        <div style="margin: ;">
-            <table style="border: 3px solid rgba(189, 189, 189, 0.527); border-collapse: collapse; width: 60%;">
-                <tr style="text-align: center;">
-                    <td style="border: 3px solid rgba(189, 189, 189, 0.527); padding: 30px;">
-                        <h3 style="color: #db641a;">Lorem ipsum dolor</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
-                    </td>
-                    <td style="border: 3px solid rgba(189, 189, 189, 0.527); padding: 30px;">
-                        <h3 style="color: #db641a;">Lorem ipsum dolor</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
-                    </td>
-                    <td style="border: 3px solid rgba(189, 189, 189, 0.527); padding: 30px;">
-                        <h3 style="color: #db641a;">Lorem ipsum dolor</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
-                    </td>
-                    <td style="border: 3px solid rgba(189, 189, 189, 0.527); padding: 30px;">
-                        <h3 style="color: #db641a;">Lorem ipsum dolor</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
-                    </td>
-                </tr>
-            </table>
+
+        <h2 class="titulo-Azul">Lorem ipsum dolor</h2>
+
+        <div class="tabela-Bordas">
+            <div>
+                <h3 style="color: #db641a;">Lorem ipsum dolor</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </div>
+
+            <div>
+                <h3 style="color: #db641a;">Lorem ipsum dolor</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </div>
+        
+            <div>
+                <h3 style="color: #db641a;">Lorem ipsum dolor</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </div>
+
+            <div>
+                <h3 style="color: #db641a;">Lorem ipsum dolor</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </div>
+
         </div>
         <!-- #endregion Tabela Bordas-->
 
         <!-- Seção Foto High Five-->
-        <section>
+        <section class="high-Five">
+            
             <img src="./imagens/achievement-adult-agreement-1391373.png" alt="Foto pessoas comemorando">
+            <div id="vinheta-high-Five"></div>
+
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
         </section>
 
