Terminei de estruturar a imagem banner, o formulario e o footer

--- a/main.html
+++ b/main.html
@@ -286,37 +286,43 @@
         <section class="high-Five">
             
             <img src="./imagens/achievement-adult-agreement-1391373.png" alt="Foto pessoas comemorando">
-            <div id="vinheta-high-Five"></div>
-
+            
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
         </section>
 
         <!-- Formulário -->
         <!-- #region Formulário-->
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="main-Texto">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
 
-        <form action="" style="background-color: rgba(128, 128, 128, 0.712); padding: 20px; width: 40%;">
-            <label for="txtLorem1">Lorem ipsum</label>
-            <input type="text" name="txtLorem1" style="width: 80%; padding: 10px; margin: 20px;">
-            <label for="txtLorem2">Lorem ipsum</label>
-            <input type="text" name="txtLorem2" style="width: 80%; padding: 10px; margin: 20px;">
-            <label for="txtLorem3">Lorem ipsum</label>
-            <input type="text" name="txtLorem3" style="width: 80%; padding: 10px; margin: 20px;">
-            <label for="txtLorem4">Lorem ipsum</label>
-            <input type="text" name="txtLorem4" style="width: 80%; padding: 10px; margin: 20px;">
-            <label for="txtLorem5">Lorem ipsum</label>
-            <input type="text" name="txtLorem5" style="width: 80%; padding: 10px; margin: 20px;">
+        <div class="container-Form">
 
-            <button type="submit">Lorem ipsum</button>
-        </form>
+            <form class="formulario" action="">
+                <label for="txtLorem1">Lorem ipsum</label>
+                <input type="text" name="txtLorem1">
+                <label for="txtLorem2">Lorem ipsum</label>
+                <input type="text" name="txtLorem2">
+                <label for="txtLorem3">Lorem ipsum</label>
+                <input type="text" name="txtLorem3">
+                <label for="txtLorem4">Lorem ipsum</label>
+                <input type="text" name="txtLorem4">
+                <label for="txtLorem5">Lorem ipsum</label>
+                <input type="text" name="txtLorem5">
+
+                <input type="submit" value="Lorem ipsum">
+            </form>
+        </div>
+
         <!-- #endregion Formulário -->
 
     </main>
+
     <!-- Footer -->
-    <footer>
-        <div style="margin: 10px;">
+    <footer class="footer">
+        <div class="container-Footer-Imagens">
             <img src="./imagens/Grupo 132.png" alt="Logo">
-            <img src="./imagens/Grupo 124.png" alt="Logomarca" style="margin-right: 50px;">
+            <img src="./imagens/Grupo 124.png" alt="Logomarca">
 
             <img src="./imagens/Grupo 132.png" alt="Logo">
             <img src="./imagens/Grupo 124.png" alt="Logomarca">
