Comecei estruturar as primeiras responsividades, nos textos,cards coloridos e tabela com borda

--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
             <div id="vinheta"></div>
 
             <div class="landingPage-Elementos">
-                <h1>Lorem Ipsum</h1>
+                <h1>Lorem ipsum</h1>
                 <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit</h3>
                 <button>Lorem ipsum</button>    
             </div>
@@ -200,7 +200,7 @@
                     <img src="./imagens/support.png" alt="Foto mãos comprimentando">
                 </div>
 
-                <h3 style="color: #7fba00;">Lorem ipsum dolor</h3>
+                <h3>Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Quis ipsum suspendisse ultrices gravida.
@@ -216,7 +216,7 @@
                     <img src="./imagens/shield.png" alt="Foto escudo">
                 </div>
 
-                <h3 style="color: #00a4ef;">Lorem ipsum dolor</h3>
+                <h3>Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         Quis ipsum suspendisse ultrices gravida.
@@ -232,7 +232,7 @@
                     <img src="./imagens/notebook-and-mouse-cursor.png" alt="Foto notebook">
                 </div>
 
-                <h3 style="color: #ffb900;">Lorem ipsum dolor</h3>
+                <h3>Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         Quis ipsum suspendisse ultrices gravida.
